Fix minor UI issues
Some buttons were a couple of pixels off-center

--- a/client/component/geo-map/style.scss
+++ b/client/component/geo-map/style.scss
@@ -68,3 +68,7 @@
 	height: 100px;
 	padding-top: 20px;
 }
+
+.redirection-geomap_simple {
+	padding: 10px;
+}
