--- a/client/component/table/style.scss
+++ b/client/component/table/style.scss
@@ -222,12 +222,6 @@
 	overflow: visible;
 }
 
-.redirect-table__actions {
-	.redirect-multioption {
-		margin-top: 1px;
-	}
-}
-
 .redirect-table__actions .actions {
 	.button {
 		height: 28px;
