--- a/client/page/home/style.scss
+++ b/client/page/home/style.scss
@@ -96,6 +96,10 @@
 	.redirection-edit_advanced {
 		text-decoration: none;
 		font-size: 16px;
+
+		svg {
+			padding-top: 2px;
+		}
 	}
 }
 
